--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,163 @@
-streamlit
-numpy
-pandas
-yfinance
-matplotlib
-pyportfolioopt
-versioneer
-statsmodels
-scikit-learn
-tabulate
-openpyxl
-fredapi
-plotly
-PyYAML
-langchain
-openai
-wikipedia
-tiktoken
-altair
-stqdm
-ta
-unstructured
-pdf2image
-pytesseract
-python-magic
-python-dotenv
-Nasdaq-Data-Link
-quandl
-pyfolio
-empyrical
+aiohttp==3.9.3
+aiosignal==1.3.1
+altair==5.2.0
+annotated-types==0.6.0
+anyio==4.3.0
+appdirs==1.4.4
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+clarabel==0.7.1
+click==8.1.7
+contourpy==1.2.0
+cvxpy==1.4.2
+cycler==0.12.1
+dataclasses-json==0.6.4
+decorator==5.1.1
+deepdiff==6.7.1
+distro==1.9.0
+ecos==2.0.13
+emoji==2.10.1
+empyrical==0.5.5
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+executing==2.0.1
+filetype==1.2.0
+fonttools==4.49.0
+fredapi==0.5.1
+frozendict==2.4.0
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.42
+greenlet==3.0.3
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.4
+httpx==0.27.0
+idna==3.6
+importlib-metadata==7.0.1
+inflection==0.5.1
+ipython==8.22.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+langchain==0.1.11
+langchain-community==0.0.27
+langchain-core==0.1.30
+langchain-openai==0.0.8
+langchain-text-splitters==0.0.1
+langdetect==1.0.9
+langsmith==0.1.22
+lxml==5.1.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+matplotlib==3.8.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+more-itertools==10.2.0
+multidict==6.0.5
+multitasking==0.0.11
+mypy-extensions==1.0.0
+Nasdaq-Data-Link==1.0.4
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.4
+openai==1.13.3
+openpyxl==3.1.2
+ordered-set==4.1.0
+orjson==3.9.15
+osqp==0.6.5
+packaging==23.2
+pandas==2.2.1
+pandas-datareader==0.10.0
+parso==0.8.3
+patsy==0.5.6
+pdf2image==1.17.0
+peewee==3.17.1
+pexpect==4.9.0
+pillow==10.2.0
+plotly==5.19.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==15.0.0
+pybind11==2.11.1
+pydantic==2.6.3
+pydantic_core==2.16.3
+pydeck==0.8.1b0
+pyfolio==0.9.2
+Pygments==2.17.2
+pyparsing==3.1.2
+pypdf==4.1.0
+pyportfolioopt==1.5.5
+pytesseract==0.3.10
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-iso639==2024.2.7
+python-magic==0.4.27
+pytz==2024.1
+PyYAML==6.0.1
+qdldl==0.1.7.post0
+Quandl==3.7.0
+rapidfuzz==3.6.2
+referencing==0.33.0
+regex==2023.12.25
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+scikit-learn==1.4.1.post1
+scipy==1.11.4
+scs==3.2.4.post1
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.28
+stack-data==0.6.3
+statsmodels==0.14.1
+stqdm==0.0.5
+streamlit==1.32.0
+ta==0.11.0
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.3.0
+tiktoken==0.6.0
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+typing-inspect==0.9.0
+typing_extensions==4.10.0
+tzdata==2024.1
+tzlocal==5.2
+unstructured==0.12.5
+unstructured-client==0.21.1
+urllib3==2.2.1
+validators==0.22.0
+#versioneer==0.29
+watchdog==4.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+wikipedia==1.4.0
+wrapt==1.16.0
+yarl==1.9.4
+yfinance==0.2.37
+zipp==3.17.0
